Style Jekyll design

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,20 +1,21 @@
 <!DOCTYPE html>
 <html>
+<head>
 
-  {% include head.html %}
+{% include head.html %}
 
-  <body>
+</head>
+<body>
 
-    {% include header.html %}
+<div class='main-container'>
 
-    <div class="page-content">
-      <div class="wrapper">
-        {{ content }}
-      </div>
-    </div>
+  {% include header.html %}
 
-    {% include footer.html %}
+  {{ content }}
 
-  </body>
+</div>
 
+{% include footer.html %}
+
+</body>
 </html>
