--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,37 +1,25 @@
-<footer class="site-footer">
+<footer class='footer'>
 
-  <div class="wrapper">
-
-    <h2 class="footer-heading">{{ site.title }}</h2>
-
-    <div class="footer-col-wrapper">
-      <div class="footer-col footer-col-1">
-        <ul class="contact-list">
-          <li>{{ site.title }}</li>
-          <li><a href="mailto:{{ site.email }}">{{ site.email }}</a></li>
-        </ul>
-      </div>
-
-      <div class="footer-col footer-col-2">
-        <ul class="social-media-list">
-          {% if site.github_username %}
-          <li>
-            {% include icon-github.html username=site.github_username %}
-          </li>
-          {% endif %}
-
-          {% if site.twitter_username %}
-          <li>
-            {% include icon-twitter.html username=site.twitter_username %}
-          </li>
-          {% endif %}
-        </ul>
-      </div>
-
-      <div class="footer-col footer-col-3">
-        <p>{{ site.description }}</p>
-      </div>
+  {% if site.twitter_username %}
+    <div class='footer__container'>
+      <p>
+        If you liked this post, you can <a href='https://twitter.com/intent/tweet?url={{ site.url }}{{ page.url }}&text={{ page.title }}&via={{ site.twitter_username }}' target='_blank'>share it on twitter</a>.
+      </p>
     </div>
+  {% endif %}
+
+
+  <div class='footer__container'>
+
+    <p>
+      <a href='https://til.karlbowden.com'>Today I Learned</a>, a micro blog by <a href='https://karlbowden.com'>Karl Bowden</a>.
+    </p>
+
+    <p>
+      <a href='https://twitter.com/{{ site.twitter_username }}'>Twitter</a> |
+      <a href='https://github.com/agentk'>Github</a> |
+      <a href='{{ '/feed.xml' | prepend: site.baseurl }}'>RSS feed</a>
+    </p>
 
   </div>
 
