Publish Illuminate Collection

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -134,7 +134,7 @@ blockquote {
 // Code formatting ------------------------------------------------------------
 pre, code {
   border-radius: 1px;
-  font-size: 0.9rem;
+  font-size: 0.9em;
 }
 
 code {
