--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -18,7 +18,7 @@ $small-font-size: $base-font-size * 0.875;
 $text-color: #222;
 $background-color: #fff;
 $brand-color: #2a7ae2;
-$code-color: #e22a2a;
+$code-color: #0086b3;
 
 $pre-border: #eee;
 $pre-background: #f9f9f9;
